# pyndoc

./: .readthedocs.yaml  README.md  main.py  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: format_test.yml
docs/: ast.md  ast.rst  conf.py  design_proposal.md  development-instructions.rst  index.rst  modules.rst  new-readers.rst  proposal.md  pyndoc.ast.rst  pyndoc.readers.gfm.rst  pyndoc.readers.rst  pyndoc.rst  pyndoc.writers.rst  startup_instructions.md  timetable.org
src/pyndoc/: ExampleClass.py  main.py  reader.py
src/pyndoc/ast/: ast_tree.py  basic_blocks.py  blocks.py  declare.py  helpers.py  read_handler.py
src/pyndoc/ast/gfm/: blocks.py  declare.py  parse_instructions.py  tokens.py
src/pyndoc/readers/: parser.py  reader.py
src/pyndoc/readers/gfm/: blocks.py  parse_instructions.py  tokens.py
src/pyndoc/writers/: latex_writer.py  native_writer.py  typst_writer.py
tests/: block_test.py  block_tests.py  blocks_util_test.py  example_test.py  gfm_regex_test.py  latex_writer_test.py  reader_lists_test.py  reader_table_test.py  reader_test.py  table_methods_test.py  typst_writer_test.py
