[tool.poetry]
name = "pyndoc"
version = "0.1.0"
description = "CLI for conversion of markup languages"
authors = [
    "Łukasz Suchołbiak <sucholbiaklukasz@gmail.com>",
    "Bartosz Nowak <nowobart@gmail.com>",
    "Michał Pałasz <michal.palasz12@gmail.com>"
]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "pyndoc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
typing-extensions = "^4.12.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.7.3"
sphinx = "^8.1.3"

[tool.poetry.scripts]
pyndoc = "pyndoc.main:main"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
tox = "^4.23.2"
hypothesis = "^6.116.0"
pytest-mock = "^3.14.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
